# agentic-data-harness

./: .env.example  .envrc.example  .gitignore  AGENTS.md  DECISIONS.md  Makefile  README.md  ROADMAP.md  pyproject.toml
configs/: benchmark.full.yaml  benchmark.small.yaml  default.yaml  model.openai.yaml
docs/: architecture.md  baseline_raw_results.json
docs/plans/: 2026-07-08-issue-5-harness-fixes.md
scripts/: run.sh
src/adh/: __init__.py  app.py  config.py
src/adh/agents/: __init__.py  openai_sql_agent.py  prompts.py  schemas.py
src/adh/datasets/: __init__.py  generator.py  schemas.py
src/adh/db/: __init__.py  duckdb_runner.py  schema_introspect.py  sql_safety.py
src/adh/evals/: __init__.py  metrics.py  report.py  runner.py
src/adh/gateway/: __init__.py  cache.py  fingerprint.py  sql_gateway.py  why_not.py
src/adh/memory/: __init__.py  distiller.py  store.py
src/adh/tracing/: __init__.py  events.py
src/adh/utils/: __init__.py
tasks/: full.yaml  small.yaml
tests/: test_agent_prompts.py  test_agent_schemas.py  test_cache.py  test_distiller.py  test_fingerprint.py  test_generator.py  test_openai_sql_agent.py  test_report.py  test_runner.py
