[project]
name = "agentic-data-harness"
version = "0.1.0"
description = "DuckDB benchmark harness measuring speculative waste in data-agent workloads"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"
authors = [{ name = "Max", email = "me@rmax.io" }]

dependencies = [
    "duckdb>=1.0",
    "pandas>=2",
    "pydantic>=2",
    "pyyaml>=6",
    "sqlglot>=24",
    "rich>=13",
    "typer>=0.12",
    "tenacity>=8",
    "tiktoken>=0.7",
    "tabulate>=0.9",
    "openai>=1.60",
    "python-dotenv>=1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1",
]

[project.scripts]
adh = "adh.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adh"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "SIM", "C4", "RUF", "PERF", "TCH",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["adh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["src/adh"]
explicit_package_bases = true
mypy_path = "src"
ignore_missing_imports = true
